--- a/.github/workflows/Cobra.yml
+++ b/.github/workflows/Cobra.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Jobs to update datas
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       # Snake Animation
       - uses: Platane/snk@master
@@ -23,3 +23,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
