--- a/.github/workflows/Cobra.yml
+++ b/.github/workflows/Cobra.yml
@@ -3,38 +3,34 @@ name: generate animation
 on:
   # run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *" 
-  
+    - cron: "0 */24 * * *"
   # allows to manually run the job at any time
   workflow_dispatch:
-  
   # run on every push on the master branch
   push:
     branches:
-    - master
-    
-  
+      - master
 
 jobs:
   generate:
-    permissions: 
+    permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    
+
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      # generates a snake game from a github user (<github_user_name>) contributions graph
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-          
-          
+            # claro
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=%23FFDD48&color_dots=%23ebedf0,%23FFF6B3,%23FFE36E,%23FFCF2E,%23FFB300
+            # escuro
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=%23FFDD48&color_dots=%23161B22,%23B08E00,%23D6B421,%23FFD54F,%23FFE082
+
       # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
